fixing landing page links on small width devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -139,7 +139,7 @@ a:hover {
 
 .imgHover:hover {
     transform: rotate(360deg);
-   /*border-radius: 160px;*/
+    /*border-radius: 160px;*/
     opacity: 0.7;
     transition: all 0.5s ease-in-out;
 }
@@ -183,7 +183,8 @@ a:hover {
         margin-top: 25px !important;
     }
 
-    .specialCol:hover > h4 {
-        padding-bottom: 5px !important;
+    .specialCol > h4 {
+        opacity: 1;
+        padding-bottom: 5px;
     }
 }
